# geometrytp3

./: .gitignore  README.md
Ex3_Parametrization/: CMakeLists.txt  Parametrizer.cpp  Parametrizer.h  main.cpp
gmm/: Makefile.in  config.h.in  configure  configure.ac
gmm/include/: Makefile.am  Makefile.in
gmm/tests/: Makefile.in
